@@ -3,28 +3,41 @@
 # disable malloc check in glibc otw. we get corruption blarg on exit() with NDEBUG builds
 export MALLOC_CHECK_=0
 
-export GNUTIME='/usr/bin/time --portability -o' # time command
-export RUN='run -s 1000 -t 180 -k -o'
+declare -i TIMEOUT=100
+declare -i MEMOUT=1000
+
+export GNUTIME="/usr/bin/time --portability -o" # time command
+export RUN="run -s $MEMOUT -t $((TIMEOUT+20)) -k -o"
+export TIMELIMIT="timelimit -p -s 1 -t $TIMEOUT -T 20"
 export TIMEFORMAT=$'\nreal\t%3R\nuser\t%3U\nsys\t%3S' # time format
 export TESTSPATH='.' # path to lp/br/opt
 export DMCSPATH='../build/src' # path to dmcsd/dmcsc
 export LOGPATH='.' # path to output logfiles
 
+DORUN=yes # run with `run'
+DOTIMELIMIT=yes # run with `timelimit'
 VERBOSE=yes # output stuff
 LOGDAEMONS=yes # log daemon output
 
 # test instance
-export TOPO=tree
+export TOPO=ring
 declare -i CTX=10
 declare -i SIG=20
-declare -i BRS=5
-declare -i RLS=5
+declare -i BRS=10
+declare -i RLS=10
 export INST=a
 
 export MODE=streaming
 export PACK=0 # report at most $PACK many equilibria
 
 ################### below we don't need to touch anything
+
+# check GNU time
+$GNUTIME /dev/null ls > /dev/null 2>&1
+if [ $? != 0 ]; then
+	echo I need GNU time, please setup GNUTIME properly. Bailing out.
+	exit 1
+fi
 
 export TESTNAME=$TOPO-$CTX-$SIG-$BRS-$RLS-$INST
 declare -i MINPORT=5000
@@ -47,12 +60,21 @@ for (( N = 1 ; N <= $CTX ; N++ )); do
 
 	DMCSDOPTS="--context=$N --port=$((MINPORT+N)) --kb=$INPUTN.lp --br=$INPUTN.br --topology=$INPUT.opt"
 
+	DMCSDRUN="$DMCSD $DMCSDOPTS"
+	
+	if [ x$DORUN = xyes ] ; then
+		DMCSDRUN="$RUN $RUNLOGN $DMCSDRUN"
+	fi
+
+	if [ x$DOTIMELIMIT = xyes ] ; then
+		DMCSDRUN="$TIMELIMIT $DMCSDRUN"
+	fi
+
 	if [ x$VERBOSE = xyes ] ; then
-	    #echo Starting context $N on port $((MINPORT+N)) with test $INPUTN.lp and $INPUTN.br and $INPUT.opt, log=$LOGN
 	    set -x
 	fi
 
-	$RUN $RUNLOGN $DMCSD $DMCSDOPTS > $LOGN 2>&1 &
+	$DMCSDRUN > $LOGN 2>&1 &
 
 	set +x
 
@@ -60,29 +82,34 @@ for (( N = 1 ; N <= $CTX ; N++ )); do
 
 done
 
-sleep 5
+sleep 3
 
 LOGTIME=$LOGPATH/$TESTNAME-$MODE-time.log
 LOGCOUT=$LOGPATH/$TESTNAME-$MODE.log
 LOGCERR=$LOGPATH/$TESTNAME-$MODE-err.log
 LOGRUN=$LOGPATH/$TESTNAME-$MODE-run.log
 
+DMCSCOPTS="--hostname=localhost --port=$((MINPORT+1)) --system-size=$CTX"
+MODEOPTS="--s=0"
+if [ x$MODE = xstreaming ] ; then
+    MODEOPTS="--s=1 --k=$PACK"
+fi
+
+DMCSCRUN="$DMCSC $DMCSCOPTS $MODEOPTS"
+
+if [ x$DORUN = xyes ] ; then
+	DMCSCRUN="$RUN $LOGRUN $DMCSCRUN"
+fi
+
+if [ x$DOTIMELIMIT = xyes ] ; then
+	DMCSCRUN="$TIMELIMIT $DMCSCRUN"
+fi
+
 if [ x$VERBOSE = xyes ] ; then
-    #echo Starting client with localhost:$((MINPORT+1)) and systemsize $CTX, logs=$LOGCOUT, $LOGCERR, $LOGTIME
     set -x
 fi
 
-DMCSCOPTS="--hostname=localhost --port=$((MINPORT+1)) --system-size=$CTX"
-
-if [ x$MODE = xstreaming ] ; then
-
-    $GNUTIME $LOGTIME $RUN $LOGRUN $DMCSC $DMCSCOPTS --s=1 --k=$PACK > $LOGCOUT 2> $LOGCERR
-
-else
-
-    $GNUTIME $LOGTIME $RUN $LOGRUN $DMCSC $DMCSCOPTS --s=0 > $LOGCOUT 2> $LOGCERR
-
-fi
+$GNUTIME $LOGTIME $DMCSCRUN > $LOGCOUT 2> $LOGCERR
 
 set +x
 
